# chaoschain-governance-os

./: .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  ImplementationPlan.md  Makefile  README.md  SPRINT-1B-SUMMARY.md  SPRINT-5-SUMMARY.md  SPRINT-6-SUMMARY.md  cleanup_for_github.sh  demo.py  demo_governance_flow.py  docker-compose.example.yml  docker-compose.sepolia.yml  docker-compose.staging.yml  docker-compose.yml  env.example  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  real_api.py  real_data_results.json  requirements-dev.txt  requirements.txt  run_api_tests.sh  run_live_demo.sh  start_frontend_demo.sh  test_api_fixes.py  test_outcome.py  tsconfig.json
.github/workflows/: api-gateway-ci.yml  chaoscore-ci.yml  ci.yml  docker-build.yml
adapters/: __init__.py
adapters/reputation/: __init__.py  adapter.py
adapters/secure_execution/: __init__.py  adapter.py
adapters/studio/: adapter.py
agent/: __init__.py  mock_agent_registry.py  mock_blockchain_client.py  mock_proof_of_agency.py  mock_secure_execution.py  task_registry.py
agent/agents/: __init__.py  governance_agents.py  governance_agents_adapted.py  governance_analyst_agent.py  quick_demo.py  quick_demo_fixed.py
agent/agents/developer/: __init__.py
agent/agents/researcher/: __init__.py
agent/blockchain/: __init__.py  context_fetcher.py  proposal_iterator.py  task_result.py
agent/runtime/: __init__.py  base.py  demo.py  demo_quick_fixed.py  runner.py
agent/tasks/: __init__.py  gas_parameter_optimizer.py  mev_cost_estimator.py  proposal_sanity_scanner.py
agent/tools/: __init__.py  ethereum.py  simulation.py
alembic/: env.py
alembic/versions/: initial_schema.py
api/auth/: api_key.py
api/models/: __init__.py  attestation.py  attestations.py  crud.py  database.py  proposals.py  schemas.py  simulation.py  simulation_runs.py
api/rest/: app.py  schemas.py
api/rest/routers/: __init__.py  attestation.py  proposals.py  simulation.py  stream.py
api_gateway/: Makefile  README.md  __init__.py  client_example.py  dependencies.py  main.py  metrics.py
api_gateway/auth/: __init__.py  jwt_auth.py
api_gateway/routers/: __init__.py  actions.py  agents.py  anchoring.py  common.py  impact_labels.py  reputation.py  studios.py
api_gateway/testing/: integration_test.py  sqlite_adapter.py
backup/crew/: __init__.py  governance_crew.py  quick_demo.py
backup/crew/developer/: parameter_optimizer.py
backup/crew/researcher/: gas_metrics_researcher.py
chaoschain-governance-os/adapters/agent_registry/: __init__.py  adapter.py
chaoschain-governance-os/adapters/proof_of_agency/: __init__.py  adapter.py
chaoscore/: README.md  __init__.py  pyproject.toml  setup.sh
chaoscore/api/: metrics.py
chaoscore/core/: __init__.py  database_adapter.py  secure_execution.py  secure_execution_sgx.py
chaoscore/core/agent_registry/: __init__.py  implementation.py  interfaces.py
chaoscore/core/common/: __init__.py  db.py
chaoscore/core/db/: __init__.py  adapter.py  postgres_adapter.py  sqlite_adapter.py
chaoscore/core/ethereum/: __init__.py  client.py  implementation.py  interfaces.py
chaoscore/core/proof_of_agency/: __init__.py  implementation.py  interfaces.py
chaoscore/core/reputation/: __init__.py  implementation.py  interfaces.py  models.py
chaoscore/core/secure_execution/: __init__.py  implementation.py  interfaces.py
chaoscore/core/studio/: __init__.py  implementation.py  interfaces.py
chaoscore/examples/: __init__.py  agent_registry_demo.py  blockchain_demo.py  proof_of_agency_demo.py.bak
chaoscore/sdk/python/: README.md  __init__.py  adapters.py  client.py  setup.py
chaoscore/sdk/python/examples/: governance_example.py
chaoscore/tests/: __init__.py
chaoscore/tests/integration/: __init__.py  test_agent_registry.py
chaoscore/tests/unit/: __init__.py
chaoscore/tests/unit/core/: __init__.py
chaoscore/tests/unit/core/agent_registry/: __init__.py  test_agent_registry.py
chaoscore/tests/unit/core/blockchain/: __init__.py  test_ethereum_client.py
db/: init.sql
deployments/: .env.sepolia.example  .env.staging.example
deployments/grafana/: dashboard.json
deployments/hardhat/: deploy_endpoint.js
deployments/prometheus/: prometheus.yml
deployments/sepolia/: ChaosEndpoint.json  README.md
docs/: CHAOSCORE_ARCHITECTURE.md  GOVERNANCE_STUDIO_SPEC.md  HEALTH_CHECK.md  MVP_SPEC.md  PLATFORM_ROADMAP.md  PROOF_OF_AGENCY_SPEC.md  ROADMAP.md  SPRINT-2-SUMMARY.md  SPRINT-4-SUMMARY.md  SPRINT_PLANNING.md  TECHNICAL_AUDIT.md  TECHNICAL_SPEC.md  demo.md  governance_studio.md  governance_studio_demo.md  studio_framework.md
docs/api_gateway/: EXAMPLES.md  README.md  sample_client.py
env/: pyvenv.cfg
ethereum/client/: endpoint.ts
ethereum/contracts/: ChaosEndpoint.sol
ethereum/monitoring/: live_gas.py
ethereum/scripts/: test_anchoring.js
examples/: debug_auth.py  demo_simple.py  governance_agent_autonomous.py  governance_ethereum_demo.py  governance_goerli_demo.py  governance_sepolia_demo.py  proof_of_agency_demo.py  sdk_gateway_demo.py  sdk_gateway_demo_http.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
scripts/: demo_e2e.sh  deploy.js  docker-compose.demo.yml  nginx.conf  run_chaoscore_demos.sh  verify_sprint0.sh
scripts/docker/: Dockerfile.api  Dockerfile.hardhat
sdk/: setup.py
sdk/chaoscore/: __init__.py  client.py  exceptions.py
simulation/: __init__.py  secure_simulation.py  sim_harness.py
simulation/harness/: __init__.py  config.py
test_env/: pyvenv.cfg
tests/anchoring/: test_success_response.py
tests/api/: conftest.py  test_actions_api.py  test_api_gateway.py  test_reputation_api.py  test_stream.py  test_studios_api.py
tests/ethereum/: ChaosEndpoint.test.js
tests/integration/: test_reputation_integration.py  test_secure_simulation_poa.py
tests/load/: api_gateway_load.js
utils/: __init__.py  logger.py
verification/: __init__.py
verification/tee/: README.md  __init__.py
verification/tee/enclave/: Cargo.toml
verification/tee/enclave/src/: lib.rs
(+24 files in other folders)
