[package]
name = "chaoschain-governance-os"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Team <info@chaoschain.ai>"]
description = "Cross-chain, AI-driven governance platform for blockchain networks"

[workspace]
members = [
    "verification/tee/enclave",
]

[features]
default = []
sgx = ["sgx_urts", "sgx_types"]

[dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional SGX dependencies
sgx_urts = { version = "2.17.0", optional = true }
sgx_types = { version = "2.17.0", optional = true }

[dev-dependencies]
rand = "0.8"
tempfile = "3.8" 