[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoschain-governance-os"
version = "0.1.0"
description = "Cross-chain, AI-driven governance platform for blockchain networks"
authors = [
    {name = "ChaosChain Team", email = "info@chaoschain.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "web3>=6.0.0",
    "requests>=2.28.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = [
    "agent",
    "agent.crew",
    "agent.runtime",
    "agent.tools",
    "verification",
    "verification.tee",
    "verification.attestation",
    "verification.audit",
    "ethereum",
    "ethereum.client",
    "ethereum.monitoring",
    "simulation",
    "simulation.harness",
    "simulation.metrics",
    "simulation.scenarios",
    "reputation",
    "reputation.db",
    "reputation.scoring",
    "reputation.api",
    "api",
    "api.rest",
    "api.auth"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 