[package]
name = "chaoschain-enclave"
version = "0.1.0"
edition = "2021"
authors = ["ChaosChain Team <info@chaoschain.ai>"]
description = "SGX enclave for ChaosChain Governance OS"

[features]
default = []
sgx = ["sgx_tstd", "sgx_types"]

[dependencies]
# Regular dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SGX-specific dependencies (feature-gated)
sgx_tstd = { version = "2.17.0", optional = true }
sgx_types = { version = "2.17.0", optional = true }

[dev-dependencies]
# Test-only dependencies
rand = "0.8" 